--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -29,13 +29,13 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
 
       - name: Install doxygen
-        run: sudo apt-get -y install doxygen
+        run: apt update && apt install -y doxygen
 
       - name: Install requirements
         run: python3 -m pip install -r doc/sphinx/requirements.txt
@@ -44,7 +44,7 @@ jobs:
         run: cd doc; ./generate_sphinx_doc.sh
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
           path: 'doc/html_sphinx'
 
