--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/configure-pages@v5
 
       - name: Install doxygen
-        run: apt update && apt install -y doxygen
+        run: sudo apt update && sudo apt install -y doxygen
 
       - name: Install requirements
         run: python3 -m pip install -r doc/sphinx/requirements.txt
